1.添加切除查询，故障切除界面

--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Engine.TCMS.Turkmenistan.csproj
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Engine.TCMS.Turkmenistan.csproj
@@ -239,12 +239,17 @@
     <Compile Include="Controller\BtnActionResponser\CurrentCarInfoResponse.cs" />
     <Compile Include="Controller\BtnActionResponser\CutSerchBtnResponse.cs" />
     <Compile Include="Controller\BtnActionResponser\FaultCUtBtnReposne.cs" />
+    <Compile Include="Controller\BtnActionResponser\FaultCutViewNextPageBtnReposne.cs" />
     <Compile Include="Controller\BtnActionResponser\FaultResumeBtnResposne.cs" />
+    <Compile Include="Controller\BtnActionResponser\FaultViewCutBtnResponse.cs" />
     <Compile Include="Controller\BtnActionResponser\LanguageSwitch.cs" />
     <Compile Include="Controller\BtnActionResponser\LightBtnReposne.cs" />
     <Compile Include="Controller\BtnActionResponser\TemperatureUpInfoResponse.cs" />
     <Compile Include="Event\NavigatorToView.cs" />
     <Compile Include="Event\ReSourceChangedEvent.cs" />
+    <Compile Include="Extension\SentDataExtention.cs" />
+    <Compile Include="Model\FaultCutModel.cs" />
+    <Compile Include="Model\FaultCutUnit.cs" />
     <Compile Include="Model\Fault\FaultInfo.cs" />
     <Compile Include="Model\RunParamUnit.cs" />
     <Compile Include="Resources\Keys\InBoolKeys.Designer.cs">
