--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Engine.TCMS.Turkmenistan.csproj
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Engine.TCMS.Turkmenistan.csproj
@@ -304,6 +304,7 @@
     <Compile Include="Controller\BtnActionResponser\ScreenModelViewNextPageBtnResponse.cs" />
     <Compile Include="Controller\BtnActionResponser\TemperatureUpInfoResponse.cs" />
     <Compile Include="Controller\BtnActionResponser\TwoScreenBtnReponse.cs" />
+    <Compile Include="Converter\DoubleToStringConverter.cs" />
     <Compile Include="Event\NavigatorToView.cs" />
     <Compile Include="Event\ReSourceChangedEvent.cs" />
     <Compile Include="Extension\SentDataExtention.cs" />
