1.添加故障信息

--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Engine.TCMS.Turkmenistan.csproj
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Engine.TCMS.Turkmenistan.csproj
@@ -306,12 +306,14 @@
     <Compile Include="Controller\BtnActionResponser\TwoScreenBtnReponse.cs" />
     <Compile Include="Converter\DoubleToStringConverter.cs" />
     <Compile Include="Event\NavigatorToView.cs" />
+    <Compile Include="Event\ReconnectionChangedEvent.cs" />
     <Compile Include="Event\ReSourceChangedEvent.cs" />
     <Compile Include="Extension\SentDataExtention.cs" />
     <Compile Include="Model\AxleBitModel.cs" />
     <Compile Include="Model\AxleBitUnit.cs" />
     <Compile Include="Model\FaultCutModel.cs" />
     <Compile Include="Model\FaultCutUnit.cs" />
+    <Compile Include="Model\FaultModel.cs" />
     <Compile Include="Model\Fault\FaultInfo.cs" />
     <Compile Include="Model\RunParamModel.cs" />
     <Compile Include="Model\RunParamUnit.cs" />
